# naml

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  README.md
.claude/: TODO.md  claude.md  context.md  humming-leaping-axolotl.md  settings.local.json
.claude/design/: architecture.md  concurrency.md  implementation-phases.md  jit-architecture.md  type-mappings.md  vision.md
.claude/designs/: 2026-01-18-ast-parser-design.md  2026-01-18-parser-performance.md
.claude/hooks/: pre-commit.sh  pre-edit.sh  pre-write.sh
.github/workflows/: release.yml
docs/: language-reference.md
docs/website/: astro.config.mjs  package-lock.json  package.json
docs/website/src/content/docs/: index.mdx
docs/website/src/content/docs/examples/: basics.md  concurrency.md  data-structures.md  database.md  file-io.md  index.md  networking.md  packages.md
docs/website/src/content/docs/guide/: 1-installation.md  2-quick-start.md  (+4 more)
docs/website/src/styles/: custom.css
editors/vscode/: README.md  bun.lockb  language-configuration.json  package.json
editors/vscode/icons/: naml-icon-theme.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: naml.tmLanguage.json
examples/: array_functions.naml  array_functions.nm  array_map_demo.naml  array_map_demo.nm  arrays.naml  arrays.nm  atomic_demo.nm  basic.naml  binary_demo.nm  binary_tree.naml  builtins.naml  channels.naml  channels.nm  collection_test.naml  collections_demo.naml  crypto_stress_test.nm  datetime.naml  datetime.nm  encoding_demo.naml  encoding_demo.nm  env_demo.nm  exception_stack.naml  exception_stack.nm  exceptions.naml  fallible_cast.naml  fallible_cast.nm  ffi.naml  ffi.nm  ffi_math.naml  ffi_math.nm  force_unwrap.naml  fs_advanced.naml  fs_basics.nm  fs_directory.naml  fs_error_handling.nm  fs_error_type_check.nm  fs_file_handle.nm  fs_links.naml  fs_mmap.naml  fs_path.naml  (+84 more)
examples/pkg-demo/: main.nm  naml.toml
examples/pkg-demo/libs/mathlib/: main.nm  naml.toml
examples/snake_game/: food.nm  grid.naml  main.naml  snake.naml
namlc/: Cargo.toml
namlc/examples/: test_parse.rs
namlc/src/: diagnostic.rs  lib.rs  linker.rs  main.rs
namlc/src/ast/: arena.rs  expressions.rs  items.rs  literals.rs  mod.rs  operators.rs  patterns.rs  statements.rs  types.rs  visitor.rs
namlc/src/codegen/: mod.rs
namlc/src/codegen/cranelift/: array.rs  binop.rs  builtins.rs  channels.rs  closures.rs  compiler.rs  decls.rs  decref.rs  errors.rs  exceptions.rs  excepts.rs  expr.rs  externs.rs  funcs.rs  heap.rs  init.rs  io.rs  lambda.rs  literal.rs  map.rs  method.rs  methods.rs  misc.rs  mod.rs  mono.rs  options.rs  pattern.rs  print.rs  runtime.rs  scan.rs  spawns.rs  stmt.rs  strings.rs  structs.rs  trampoline.rs  types.rs
namlc/src/codegen/rust/: expressions.rs  mod.rs  statements.rs  types.rs
namlc/src/lexer/: mod.rs
namlc/src/parser/: combinators.rs  error.rs  expressions.rs  input.rs  items.rs  mod.rs  patterns.rs  statements.rs  types.rs
namlc/src/runtime/: array.rs  bytes.rs  channel.rs  map.rs  mod.rs  scheduler.rs  value.rs
namlc/src/source/: mod.rs
namlc/src/typechecker/: env.rs  error.rs  generics.rs  infer.rs  mod.rs  symbols.rs  typed_ast.rs  types.rs  unify.rs
namlc/tests/: aot.rs
namlc/tests/fixtures/aot/: arithmetic.nm  arrays.nm  atomics.nm  channels.nm  control_flow.nm  enums.nm  exceptions.nm  functions.nm  generics.nm  interfaces.nm  lambdas.nm  maps.nm  mem_array_strings.nm  mem_binary_tree.nm  mem_loop_strings.nm  mem_option_heap.nm  mem_spawn_captured.nm  mem_struct_fields.nm  methods.nm  mutex.nm  nested_structs.nm  options.nm  spawn_join.nm  std_datetime.nm  std_metrics.nm  std_random.nm  strings.nm  structs.nm  type_casting.nm  variables.nm
runtime/naml-runtime/: Cargo.toml
runtime/naml-runtime/src/: bytes.rs  lib.rs  map.rs
std/naml-std-collections/: Cargo.toml
std/naml-std-collections/src/: arrays.rs  lib.rs  maps.rs
std/naml-std-core/: Cargo.toml
std/naml-std-core/src/: arena.rs  array.rs  bytes.rs  exception.rs  lib.rs  map.rs  print.rs  stack.rs  value.rs
std/naml-std-crypto/: Cargo.toml
std/naml-std-crypto/src/: hash.rs  hmac_mod.rs  kdf.rs  lib.rs  random.rs
std/naml-std-datetime/: Cargo.toml
std/naml-std-datetime/src/: lib.rs
std/naml-std-encoding/: Cargo.toml
std/naml-std-encoding/src/: base64.rs  binary.rs  hex.rs  json.rs  lib.rs  toml.rs  url.rs  utf8.rs  yaml.rs
std/naml-std-env/: Cargo.toml
std/naml-std-env/src/: lib.rs
std/naml-std-fs/: Cargo.toml
std/naml-std-fs/src/: file_handle.rs  lib.rs  links.rs  mmap.rs  ownership.rs
std/naml-std-io/: Cargo.toml
std/naml-std-io/src/: lib.rs
std/naml-std-metrics/: Cargo.toml
std/naml-std-metrics/src/: lib.rs
std/naml-std-net/: Cargo.toml
std/naml-std-net/src/: errors.rs  lib.rs
std/naml-std-net/src/http/: client.rs  mod.rs  server.rs  types.rs
std/naml-std-net/src/http/middleware/: mod.rs
std/naml-std-net/src/tcp/: client.rs  mod.rs  server.rs
std/naml-std-net/src/tls/: client.rs  mod.rs  server.rs
std/naml-std-net/src/udp/: mod.rs
std/naml-std-os/: Cargo.toml
std/naml-std-os/src/: lib.rs
std/naml-std-path/: Cargo.toml
std/naml-std-path/src/: lib.rs
std/naml-std-process/: Cargo.toml
std/naml-std-process/src/: lib.rs
std/naml-std-random/: Cargo.toml
std/naml-std-random/src/: lib.rs
std/naml-std-sqlite3/: Cargo.toml
std/naml-std-sqlite3/src/: lib.rs  sqlite.rs
std/naml-std-strings/: Cargo.toml
std/naml-std-strings/src/: lib.rs
std/naml-std-testing/: Cargo.toml
std/naml-std-testing/src/: lib.rs
std/naml-std-threads/: Cargo.toml
std/naml-std-threads/src/: atomic.rs  channel.rs  lib.rs  mutex.rs  rwlock.rs  scheduler.rs
std/naml-std-timers/: Cargo.toml
std/naml-std-timers/src/: lib.rs  schedule.rs
tools/naml-lsp/: Cargo.toml
tools/naml-lsp/src/: analysis.rs  backend.rs  capabilities.rs  completions.rs  hover.rs  lsp_symbols.rs  main.rs  symbols.rs
tools/naml-pkg/: Cargo.toml
tools/naml-pkg/src/: cache.rs  downloader.rs  errors.rs  init.rs  lib.rs  manager.rs  manifest.rs  resolver.rs
tools/naml-pkg/tests/: integration.rs
(+30 files in other folders)
