##
## naml - A fast, cross-platform programming language
##
## Workspace manifest defining the compiler and related crates.
## Targets: Native binary, Server WASM, Browser WASM
##

[workspace]
resolver = "2"
members = [
    "namlc",
    "std/naml-std-core",
    "std/naml-std-random",
    "std/naml-std-io",
    "std/naml-std-threads",
    "std/naml-std-datetime",
    "std/naml-std-metrics",
    "std/naml-std-strings",
    "std/naml-std-collections",
    "std/naml-std-fs",
    "std/naml-std-path",
    "std/naml-std-encoding",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["naml contributors"]
license = "MIT"
repository = "https://github.com/naml-lang/naml"
description = "A fast, cross-platform programming language"

[workspace.dependencies]
##
## String interning for zero-allocation identifiers
##
lasso = { version = "0.7", features = ["multi-threaded"] }

##
## Cranelift JIT compilation
##
cranelift = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"

##
## Error handling and diagnostics
##
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }
ariadne = "0.5"

##
## CLI and argument parsing
##
clap = { version = "4.5", features = ["derive"] }

##
## Serialization for cache and config
##
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

##
## Hashing for cache invalidation
##
blake3 = "1.5"

##
## File system utilities
##
walkdir = "2.5"

##
## Async runtime (for server mode)
##
tokio = { version = "1.43", features = ["full"] }

##
## HTTP client/server
##
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

##
## WASM targets
##
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }

##
## Testing
##
insta = { version = "1.41", features = ["json"] }

##
## Parser combinators
##
nom = "7"

##
## Small vector optimization (stack-allocated for small sizes)
##
smallvec = { version = "1.13", features = ["union"] }

##
## SIMD-accelerated byte searching
##
memchr = "2.7"

##
## Arena allocation for AST nodes
##
bumpalo = { version = "3.16", features = ["collections"] }

##
## C library bindings for runtime
##
libc = "0.2"

##
## naml standard library crates
##
naml-std-core = { path = "std/naml-std-core" }
naml-std-random = { path = "std/naml-std-random" }
naml-std-io = { path = "std/naml-std-io" }
naml-std-threads = { path = "std/naml-std-threads" }
naml-std-datetime = { path = "std/naml-std-datetime" }
naml-std-metrics = { path = "std/naml-std-metrics" }
naml-std-strings = { path = "std/naml-std-strings" }
naml-std-collections = { path = "std/naml-std-collections" }
naml-std-fs = { path = "std/naml-std-fs" }
naml-std-path = { path = "std/naml-std-path" }
naml-std-encoding = { path = "std/naml-std-encoding" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
