##
## namlc - The naml compiler
##
## Provides lexing, parsing, type checking, JIT execution, and code generation.
##

[package]
name = "namlc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The naml programming language compiler"

[[bin]]
name = "naml"
path = "src/main.rs"

[lib]
name = "namlc"
path = "src/lib.rs"

[dependencies]
##
## String interning
##
lasso.workspace = true

##
## Cranelift JIT
##
cranelift.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true

##
## Error handling
##
thiserror.workspace = true
miette.workspace = true
ariadne.workspace = true

##
## CLI
##
clap.workspace = true

##
## Serialization
##
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

##
## Hashing
##
blake3.workspace = true

##
## File system
##
walkdir.workspace = true

##
## Async runtime
##
tokio.workspace = true

##
## Parser combinators
##
nom.workspace = true

##
## Small vector optimization
##
smallvec.workspace = true

##
## Insertion-order preserving hashmap
##
indexmap.workspace = true

##
## SIMD-accelerated byte searching
##
memchr.workspace = true

##
## Arena allocation for AST nodes
##
bumpalo.workspace = true

##
## C library bindings for runtime
##
libc.workspace = true

##
## naml standard library crates
##
naml-std-core.workspace = true
naml-std-random.workspace = true
naml-std-io.workspace = true
naml-std-threads.workspace = true
naml-std-datetime.workspace = true
naml-std-metrics.workspace = true
naml-std-strings.workspace = true
naml-std-collections.workspace = true
naml-std-fs.workspace = true
naml-std-path.workspace = true
naml-std-encoding.workspace = true
naml-std-net.workspace = true
naml-std-env.workspace = true
naml-std-os.workspace = true
naml-std-process.workspace = true
naml-std-testing.workspace = true
naml-std-sqlite3.workspace = true
naml-std-timers.workspace = true
naml-std-crypto.workspace = true

##
## Package manager
##
naml-pkg.workspace = true

[dev-dependencies]
insta.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[features]
default = ["jit"]
jit = []
