##
## naml-std-timers - Timer and interval utilities
##
## Provides non-blocking timers for naml programs:
## - One-shot timeouts (set_timeout / cancel_timeout)
## - Repeating intervals (set_interval / cancel_interval)
## - Background timer thread with priority queue
## - Callbacks dispatched on the M:N scheduler thread pool
##
## Platform: Native only (timers not available in WASM)
##

[package]
name = "naml-std-timers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Timer and interval utilities for the naml programming language"

[lib]
name = "naml_std_timers"
path = "src/lib.rs"

[dependencies]
naml-std-threads.workspace = true
naml-std-core.workspace = true
croner.workspace = true
chrono.workspace = true
