##
## naml Language Server Protocol Implementation
##
## Provides IDE features for the naml programming language:
## - Syntax error diagnostics
## - Type error diagnostics
## - Hover information (type tooltips)
## - Go to definition
## - Find references
## - Document symbols
## - Completion suggestions
##

[package]
name = "naml-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for naml"

[[bin]]
name = "naml-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
namlc = { path = "../../namlc" }
naml-pkg.workspace = true
lasso.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
