##
## naml-pkg - Package manager library for the naml programming language
##
## Provides dependency resolution, Git-based package downloads,
## and project scaffolding. Used by `naml pkg` subcommands in the CLI.
##

[package]
name = "naml-pkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Package manager library for the naml programming language"

[lib]
name = "naml_pkg"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
indexmap = { workspace = true, features = ["serde"] }
git2 = "0.19"
dirs = "6"
blake3.workspace = true

[dev-dependencies]
tempfile = "3"
